# handwritten-ocr

./: .env.example  .gitignore  LICENSE  PLAN_improve_agent_orchestration.md  RAG_claude_code_prompt.md  README.md  create_notes.py  environment.yml  pyproject.toml
.github/: copilot-instructions.md
data/input/: .gitkeep  test_notes_eval.json  test_notes_trace.json  test_notes_trace_summary.txt  test_notes_transcription.txt
data/output/: .gitkeep
docs/: scholar-council-rag-plan.md
notebooks/: annotate_and_ingest.ipynb  ocr_eval.ipynb  ocr_playground.ipynb  rag_explore.ipynb
ocr_agent/: __main__.py  agents.py  config.py  eval_final.py  graph.py  nodes.py  orchestrator.py  requirements.txt  state.py  tools.py  trace.py  transcribe.py
rag/: README.md  __init__.py  client.py  config.py  schema.py
rag/embeddings/: __init__.py  bge_embedder.py  visual_embedder.py
rag/ingest/: __init__.py  __main__.py  cli.py  index_images.py  upsert.py
rag/storage/: s3.py
rag/tests/: test_tools.py
rag/tools/: __init__.py  search_by_topic.py  search_context.py  search_similar_word.py  search_visual.py
rag/utils/: __init__.py  scoring.py
tests/: test_ocr.py
